--- a/valerieblog/config.toml
+++ b/valerieblog/config.toml
@@ -1,5 +1,5 @@
 # default configuration
-baseURL = "http://examplesite.com"
+baseURL = "valeriely.github.io"
 languageCode = "en-us"
 summaryLength = "10"
 theme = "kross-hugo"
@@ -36,12 +36,12 @@ weight = 1
 [[menu.main]]
 URL = "blog"
 name = "Blog"
-weight = 3
+weight = 2
 
 [[menu.main]]
 URL = "portfolio"
 name = "Portfolio"
-weight = 2
+weight = 3
 
 [[menu.main]]
 URL = "contact"
